[gd_scene load_steps=6 format=3 uid="uid://dt0neiabpvfx3"]

[ext_resource type="PackedScene" uid="uid://do6f27p607nii" path="res://player.tscn" id="1_nrx62"]
[ext_resource type="Script" path="res://main.gd" id="1_sbs2e"]
[ext_resource type="PackedScene" uid="uid://4bbude3q1jok" path="res://mob.tscn" id="2_lqtu2"]
[ext_resource type="Texture2D" uid="uid://di7f3556pv6wb" path="res://icon.svg" id="4_rvpuo"]

[sub_resource type="Curve2D" id="Curve2D_koov8"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_sbs2e")
mob_scene = ExtResource("2_lqtu2")

[node name="Player" parent="." instance=ExtResource("1_nrx62")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_koov8")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(0, 82.5602)
rotation = -1.5708
progress = 2317.44

[node name="Sprite2D" type="Sprite2D" parent="MobPath/MobSpawnLocation"]
visible = false
texture = ExtResource("4_rvpuo")

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
